Dark mode fixes (#354)

--- a/apps/web/src/app/[locale]/globals.css
+++ b/apps/web/src/app/[locale]/globals.css
@@ -127,5 +127,37 @@
       100% theme(space.4);
     background-attachment: local, local, scroll, scroll;
   }
+
+  @media (prefers-color-scheme: dark) {
+    .scroll-shadows-sm {
+      background:
+      /* Shadow Cover TOP */
+        linear-gradient(
+            theme("colors.stone.950") 10%,
+            theme("colors.stone.900 / 0%")
+          )
+          center top,
+        /* Shadow Cover BOTTOM */
+          linear-gradient(
+            theme("colors.stone.900 / 0%"),
+            theme("colors.stone.950") 90%
+          )
+          center bottom,
+        /* Shadow TOP */
+          radial-gradient(
+            farthest-side at 50% 0,
+            theme("colors.stone.100 / 10%"),
+            theme("colors.stone.100 / 0%")
+          )
+          center top,
+        /* Shadow BOTTOM */
+          radial-gradient(
+            farthest-side at 50% 100%,
+            theme("colors.stone.100 / 10%"),
+            theme("colors.stone.100 / 0%")
+          )
+          center bottom;
+    }
+  }
 }
 @tailwind utilities;
